--- a/css/StyleSheet.css
+++ b/css/StyleSheet.css
@@ -1,9 +1,18 @@
-﻿body {
-    background-color: blue;
-    text-align:center;
+﻿table {
+    border-collapse: collapse;
+    width: 100%;
 }
 
-h1{
-    font-family: 'Agency FB';
-    font-size: 24px;
+th, td {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
+
+tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+#addRowBtn {
+    margin-bottom: 10px;
 }
