--- a/firstWebsiteTry/css/LoginStyle.css
+++ b/firstWebsiteTry/css/LoginStyle.css
@@ -16,3 +16,21 @@ button{
     height: 30px;
     width: 72px;
 }
+
+table {
+    font-family: Arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+th, td {
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: left;
+}
+th {
+    cursor: pointer;
+}
+
+th:hover {
+    background-color: #f2f2f2;
+}
